# Practika

./: CMakeLists.txt
Laba2/Task1/src_exe/: CMakeLists.txt  main1.c
Laba2/Task1/src_lib_1/: CMakeLists.txt
Laba2/Task1/src_lib_2/: CMakeLists.txt
Laba3/Laba3/: CMakeLists.txt
Laba3/Laba3/src_exe/: CMakeLists.txt  main.c
Laba3/Laba3/src_lib_1/: CMakeLists.txt
Laba3/Laba3/src_lib_2/: CMakeLists.txt
Laba3/Laba3/src_lib_3/: CMakeLists.txt
Laba4/Laba4/Task2/src_exe/: main.c
Laba4/Laba4/Task2/src_lib/: sortStackArray.c
Laba5/Laba5/: CMakeLists.txt
Laba7/Laba7/Task3/src_lib/: CMakeLists.txt
